# bmpng

./: GUI.py  README.md  bmpExtract.py  main-noGUI.py  main.py  pyproject.toml
.github/workflows/: check.yml
sample/: deflate_fixed.dot
src/: bitio.py  bitreader.py  bitwriter.py  bmp.py  deflate.py  gui.py  huffman.py  lz77.py  main.py  myzlib.py  png.py  slidingwindow.py  slidingwindowfast.py  tui.py  zlib_.py
src/bmpng/: GUI.py  __main__.py  bmpExtract.py  gui.py  main-noGUI.py  tui.py
src/data/assets/: icon.xbm
