[project]
name = "bmpng"
version = "0.1dev0"
description = "Utilities for encoding and decoding PNG files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-2.0-or-later"}
authors = [
	{name = "Lucy Loerker", email = "kloerke1@binghamton.edu"},
	{name = "Maxwell Parker-Blue", email = "mparker4@binghamton.edu"},
]
keywords = ["png", "bmp", "zlib", "deflate"]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python",
	"Topic :: Multimedia :: Graphics :: Viewers",
	"Topic :: System :: Archiving :: Compression",
]

[project.urls]
repository = "https://github.com/CodingKoopa/bmpng"

[project.scripts]
bmpng = "bmpng.__main__:cli"

[project.gui-scripts]
bmpng-gui = "bmpng.__main__:gui"
